--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <script src='node_modules/react/dist/react.js'></script>
+    <script src='node_modules/react-dom/dist/react-dom.js'></script>
   </head>
-  <body id="app">
+  <body>
+    <div id="app"></div>
+    <script src='compiled/src/components/canvas.js'></script>
+    <script src='compiled/src/components/pages.js'></script>
+    <script src='compiled/src/components/app.js'></script>
+    <script src='compiled/src/index.js'></script>
   </body>
 </html>
