--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src='compiled/src/data/data.js'></script>
     <script src='compiled/src/components/canvas.js'></script>
     <script src='compiled/src/components/pages.js'></script>
     <script src='compiled/src/components/app.js'></script>
