Implement grid system

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link href='node_modules/react-grid-layout/css/styles.css'></link>
     <script src='node_modules/react/dist/react.js'></script>
     <script src='node_modules/react-dom/dist/react-dom.js'></script>
+    <script src='node_modules/react-grid-layout/dist/react-grid-layout.min.js'></script>
   </head>
   <body>
     <div id="app"></div>
