--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link href='node_modules/react-grid-layout/css/styles.css'></link>
+    <title>Comet</title>
     <script src='node_modules/react/dist/react.js'></script>
     <script src='node_modules/react-dom/dist/react-dom.js'></script>
     <script src='node_modules/react-grid-layout/dist/react-grid-layout.min.js'></script>
+    <link rel='stylesheet' type='text/css' href='node_modules/react-grid-layout/css/styles.css' />
+    <link rel='stylesheet' type='text/css' href='css/styles.css' />
   </head>
   <body>
     <div id="app"></div>
     <script src='compiled/src/data/data.js'></script>
+    <script src='compiled/src/components/image-upload.js'></script>
     <script src='compiled/src/components/canvas.js'></script>
     <script src='compiled/src/components/pages.js'></script>
     <script src='compiled/src/components/app.js'></script>
